dataset1235/2025-2/2868285114/users/262170254/executions/3071719669_2559670275.log
== RUN (2025-08-28 22:28:06)
-- CODE: 
peso_gramas=float(input())
quantidade_diaria_gramas=float(input())

umasemana=quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
---- user output:
2508.1
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
---- user output:
1601.55
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
---- user output:
1859.563
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
---- user output:
3066.88
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
---- user output:
1572.38
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:12:05)
-- CODE: 
pesoSaco=float(input())
quantidadeD=float(input())

resta
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:12:07)
-- CODE: 
pesoSaco=float(input())
quantidadeD=float(input())

resta
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resta
NameError: name 'resta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:28:07)
-- CODE: 
peso_gramas=float(input())
quantidade_diaria_gramas=float(input())

umasemana=quantidade_diaria_gramas*7

resto=peso_gramas-umasemana

print(round(resto,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
---- user output:
2508.1
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
---- user output:
1601.55
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
---- user output:
1859.563
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
---- user output:
3066.88
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
---- user output:
1572.38
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:14:13)
-- CODE: 
pesoSaco=float(input())
quantidadeD=float(input())

resto=pesoSaco%quantidadeD

print(round(resto,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
---- user output:
12.6
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
---- user output:
2.6
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
---- user output:
9.44
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
---- user output:
6.16
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
---- user output:
21.74
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
14.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:14:10)
-- CODE: 
pesoSaco=float(input())
quantidadeD=float(input())

resto=pesoSaco%quantidadeD

print(round(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
---- user output:
12.6
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
---- user output:
2.6
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
---- user output:
9.44
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
---- user output:
6.16
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
---- user output:
21.74
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
14.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
